--- a/src/app/components/ranking/score-board.component.html
+++ b/src/app/components/ranking/score-board.component.html
@@ -12,11 +12,11 @@
   </button>
   <div class="title">Leaderboard</div>
 
-  @if(leaderboard().length){
+  @if(leaderboard.length){
   <table>
     <tbody>
       <th></th>
-      <tr *ngFor="let entry of leaderboard() | slice : 0 : 10">
+      <tr *ngFor="let entry of leaderboard | slice : 0 : 10">
         <td>{{ entry.playerName }}</td>
         <td>{{ entry.timeInSeconds }} segundos</td>
         <td>{{ entry.date | date : 'dd/MM/yy' }}</td>
