feat(chars): add chars achievements

--- a/src/app/components/achievements/achievements.component.html
+++ b/src/app/components/achievements/achievements.component.html
@@ -73,7 +73,7 @@
             >
               <img
                 class="achievement-icon"
-                [ngSrc]="'achievements/' + achievement.svgIcon + '.svg'"
+                [ngSrc]="'achievements/' + achievement.svgIcon"
                 [alt]="achievement.title"
                 fill
               />
