--- a/src/app/components/achieve-toast/toast.component.html
+++ b/src/app/components/achieve-toast/toast.component.html
@@ -2,7 +2,7 @@
   <div class="toast" *ngFor="let toast of toasts()">
     <img
       class="icon"
-      [ngSrc]="'achievements/' + toast.achievement.svgIcon + '.svg'"
+      [ngSrc]="'achievements/' + toast.achievement.svgIcon"
       [alt]="toast.achievement.title"
       width="40"
       height="40"
