--- a/src/app/pages/instructions/instructions.component.scss
+++ b/src/app/pages/instructions/instructions.component.scss
@@ -4,7 +4,7 @@
   padding: 1.5rem;
   border-radius: 2px;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0 auto 2rem;
 }
 .header-container {
   display: flex;
