--- a/src/app/pages/gamestats/results.component.scss
+++ b/src/app/pages/gamestats/results.component.scss
@@ -2,10 +2,9 @@
   background-color: var(--color-panel);
   border: 1px solid var(--color-border);
   padding: 1.5rem;
-  margin-bottom: 2rem;
   border-radius: 2px;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0 auto 2rem;
 }
 
 .header-container {
