feat(boss): final boss

--- a/src/app/components/message/game-message.component.html
+++ b/src/app/components/message/game-message.component.html
@@ -17,7 +17,7 @@
     Felicidades click para empezar el siguiente nivel.
   </button>
   }@else {
-  <button class="newgame" aria-label="Nuevo nivel" (click)="goToprizeScreen()">
+  <button class="newgame" aria-label="Nuevo nivel" (click)="goToBoss()">
     FELICIDADES!! Has completado todos los niveles, has click para reclamar tu recompensa.
   </button>
   } } }
