fix(bugs): fix bugs and screen orders

--- a/src/app/pages/gamestats/results.component.html
+++ b/src/app/pages/gamestats/results.component.html
@@ -140,4 +140,6 @@
   }@else{
   <p>Pero si aun no has juegado que estadisticas quiere pishrurrica mia.</p>
   }
+
+  <button aria-label="siguiente" (click)="goToCredits()">Siguiente</button>
 </div>
