--- a/src/app/pages/shop/shop.component.scss
+++ b/src/app/pages/shop/shop.component.scss
@@ -122,6 +122,8 @@
 .disclaimer {
   color: var(--color-text-secondary);
   margin-top: 3rem;
+  overflow-wrap: break-word;
+  white-space: normal;
 }
 
 .mensaje-compra {
