--- a/src/app/components/cell/game-cell.component.html
+++ b/src/app/components/cell/game-cell.component.html
@@ -2,7 +2,8 @@
 @let isAlive = _hunter.alive; @let content = cell().content; @let size = settings().size;
 
 <div class="cell" [class.visited]="cell().visited" [class.hunter]="hasHunter">
-  @if ((!isAlive || _hunter.hasWon || showItems || cell().visited || content?.alt === 'secret') && content) {
+  @if ((!isAlive || _hunter.hasWon || showItems || cell().visited || content?.alt === 'secret') &&
+  content) {
   <img [ngSrc]="content.image" [alt]="content.alt" fill />
   } @else if(hasHunter && isAlive){
   <img
