--- a/src/app/pages/boss/boss-fight.component.html
+++ b/src/app/pages/boss/boss-fight.component.html
@@ -35,7 +35,7 @@
       Continues {{ this._hunter().lives }}
     </button>
     @if(!bossRemaining){
-    <button aria-label="siguiente" (click)="goToprizeScreen()">Ganaste! continuar</button>
+    <button aria-label="siguiente" class="next-btn" (click)="goToprizeScreen()">Ganaste! continuar</button>
     }
   </div>
 </section>
