--- a/src/app/pages/hunt-bisho.component.html
+++ b/src/app/pages/hunt-bisho.component.html
@@ -8,12 +8,12 @@ hunterData.alive; @let hasWon = hunterData.hasWon; @let settings = game.settings
   <app-blackout />
   }
   <section class="board">
-    @if (settings.size) { @for (row of board; track $index) {
+    @if (settings.size) { @for (row of board; track $index; let rowIndex = $index) {
     <div class="row">
       @for (cell of row; track $index) {
 
       <app-game-cell
-        [class.limit]="$index % 11 === 0 && !$last && !$first"
+        [class.escape]="!rowIndex && $first && hunterData.hasGold"
         class="size-{{ boardSize }}"
         [cell]="cell"
         [hunter]="hunterData"
