--- a/src/app/pages/credits/end-credits.component.scss
+++ b/src/app/pages/credits/end-credits.component.scss
@@ -92,11 +92,17 @@
   color: var(--color-text);
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
+  @media (width < 700px){
+    font-size: .9rem;
+  }
 }
 
 .creditos-nombre {
   color: var(--color-text-secondary);
   font-size: 1.5rem;
+  @media (width < 700px){
+    font-size: 1rem;
+  }
 }
 
 .creditos-especial {
