--- a/src/app/pages/hunt-bisho.component.html
+++ b/src/app/pages/hunt-bisho.component.html
@@ -31,7 +31,10 @@ hunterData.alive; @let hasWon = hunterData.hasWon; @let settings = game.settings
   @if (settings.size) {
   <section class="player-info">
     <app-game-level [settings]="settings"></app-game-level>
-    <app-game-lives [lives]="hunterData.lives" [maxLives]="settings.difficulty.maxLives"></app-game-lives>
+    <app-game-lives
+      [lives]="hunterData.lives"
+      [maxLives]="settings.difficulty.maxLives"
+    ></app-game-lives>
   </section>
   }
 
