feat(storytelling): add story

--- a/src/app/pages/chars/characters.component.html
+++ b/src/app/pages/chars/characters.component.html
@@ -26,5 +26,7 @@
     }
   </div>
 
-  <button [disabled]="!selectedChar()" (click)="onClick()">Confirmar personaje</button>
+  <button [disabled]="!selectedChar()" (click)="onClick()">
+    Confirmar personaje
+  </button>
 </section>
