--- a/src/app/pages/gamestats/results.component.html
+++ b/src/app/pages/gamestats/results.component.html
@@ -134,5 +134,7 @@
   <p>Pero si aun no has juegado que estadisticas quiere pishrurrica mia.</p>
   }
 
-  <button aria-label="siguiente" (click)="goToCredits()">Siguiente</button>
+  <div class="button-wrapper">
+    <button class="next-btn" aria-label="siguiente" (click)="goToCredits()">Siguiente</button>
+  </div>
 </div>
