--- a/src/app/pages/chars/characters.component.scss
+++ b/src/app/pages/chars/characters.component.scss
@@ -1,20 +1,36 @@
 .prizes {
   text-align: center;
   align-content: center;
-  height: 80vh;
+  height: 100vh;
+    &::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background-image: url('/scenarios/2.gif');
+    background-size: cover;
+    background-position: center;
+    filter: blur(5px);
+    z-index: 0;
+  }
   p {
     font-size: x-large;
     color: #00ff5e;
     margin: 4rem 0;
+    text-shadow: 1px 1px 8px black;
+    position: relative;
+    z-index:2;
+    font-size: 2.5rem;
   }
 
   button {
     font-family: 'Press Start 2P', monospace;
+    position: relative;
+    z-index:2;
   }
 }
 .character-container {
   display: flex;
-  gap: 20px;
+  gap: 30px;
   justify-content: center;
   align-items: center;
   margin: 4rem 0;
@@ -38,10 +54,12 @@
   text-align: center;
   width: 120px;
   user-select: none;
+  text-shadow: 1px 1px 8px black;
   img {
     width: 100%;
     border-radius: 10px;
     pointer-events: none;
+    filter: drop-shadow(0 0 8px rgba(0,0,0,0.8));
   }
 
   &:hover:not(.character.owned) {
