feat(background): add backgournd

--- a/src/app/pages/chars/characters.component.html
+++ b/src/app/pages/chars/characters.component.html
@@ -26,7 +26,5 @@
     }
   </div>
 
-  <button [disabled]="!selectedChar()" (click)="onClick()">
-    Confirmar personaje
-  </button>
+  <button [disabled]="!selectedChar()" (click)="onClick()">Confirmar personaje</button>
 </section>
