feat(wumpus): add wumpus for each player

--- a/src/app/pages/boss/boss-fight.component.html
+++ b/src/app/pages/boss/boss-fight.component.html
@@ -16,7 +16,7 @@
         [class.miss]="cell.hit && !cell.hasBossPart"
       >
         <span *ngIf="cell.hit && cell.hasBossPart" aria-hidden="true">
-          <img src="chars/link/wumpus.png" alt="boss" />
+          <img src="chars/link/boss.png" alt="boss" />
         </span>
         <span *ngIf="cell.hit && !cell.hasBossPart" aria-hidden="true">❌</span>
       </div>
