--- a/src/app/components/animations/attack/app-wumpus-attack-animation.component.html
+++ b/src/app/components/animations/attack/app-wumpus-attack-animation.component.html
@@ -15,58 +15,11 @@
     </div>
 
     <div class="wumpus" [style.transform]="'translateY(-50%) scale(' + getWumpusScale() + ')'">
-      <svg
-        viewBox="0 0 24 24"
-        width="120"
-        height="120"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <circle cx="12" cy="12" r="10" fill="#e53e3e" />
-        <circle cx="8" cy="10" r="2" fill="white" />
-        <circle cx="16" cy="10" r="2" fill="white" />
-        <circle cx="8" cy="10" r="1" fill="black" />
-        <circle cx="16" cy="10" r="1" fill="black" />
-
-        <ng-container [ngSwitch]="step()">
-          <path
-            *ngSwitchCase="1"
-            d="M8 16 C 12 20, 16 16, 16 16"
-            stroke="white"
-            strokeWidth="1.5"
-          />
-          <path
-            *ngSwitchCase="2"
-            d="M8 16 C 12 20, 16 16, 16 16"
-            stroke="white"
-            strokeWidth="1.5"
-          />
-          <path
-            *ngSwitchCase="3"
-            d="M6 16 C 12 24, 18 16, 18 16"
-            stroke="white"
-            strokeWidth="2"
-            fill="#800000"
-          />
-          <g *ngSwitchDefault>
-            <path d="M5 15 C 12 28, 19 15, 19 15" stroke="white" strokeWidth="2" fill="#800000" />
-            <path d="M8 18 L 10 22" stroke="white" strokeWidth="1" />
-            <path d="M12 19 L 12 24" stroke="white" strokeWidth="1" />
-            <path d="M16 18 L 14 22" stroke="white" strokeWidth="1" />
-          </g>
-        </ng-container>
-
-        <path d="M7 4 L 10 8" stroke="black" strokeWidth="2" />
-        <path d="M17 4 L 14 8" stroke="black" strokeWidth="2" />
-
-        <ng-container *ngIf="step() >= 4">
-          <circle cx="7" cy="17" r="1" fill="#e53e3e" />
-          <circle cx="17" cy="17" r="1.2" fill="#e53e3e" />
-          <path d="M9 20 L 7 22" stroke="#e53e3e" strokeWidth="1.5" />
-          <path d="M15 20 L 17 22" stroke="#e53e3e" strokeWidth="1.5" />
-          <path d="M12 22 L 12 24" stroke="#e53e3e" strokeWidth="1.5" />
-        </ng-container>
-      </svg>
+      @if(selected === 'default'){
+      <img [src]="'chars/' + selected + '/wumpus.svg'" alt="bow" />
+      }@else{
+      <img [src]="'chars/' + selected + '/wumpus.png'" alt="char" width="140" height="280"/>
+      }
     </div>
 
     <!-- Sangre -->
