--- a/src/app/pages/story/story.component.scss
+++ b/src/app/pages/story/story.component.scss
@@ -20,7 +20,7 @@
   cursor: pointer;
 }
 .chapter {
-  font-size: 2rem;
+  font-size: clamp(1rem, 2vw, 2rem);
   letter-spacing: 0.3em;
   margin-bottom: 1.6em;
   text-transform: uppercase;
@@ -30,13 +30,13 @@
   word-break: break-all;
 }
 .title {
-  font-size: 1.5rem;
+  font-size: clamp(0.8rem, 2vw, 1.5rem);
   margin-bottom: 1em;
   font-weight: 700;
   color: var(--color-yellow);
 }
 .text {
-  font-size: 1rem;
+  font-size: clamp(0.6rem, 2vw, 1rem);
   line-height: 1.5;
   margin-bottom: 3.5em;
   font-style: italic;
@@ -44,7 +44,7 @@
   text-align: left;
 }
 .effect {
-  font-size: 0.9rem;
+  font-size: clamp(0.6rem, 2vw, 0.9rem);
   margin-bottom: 2em;
   color: #ffdd55;
   font-weight: 600;
@@ -74,3 +74,5 @@
     opacity: 1;
   }
 }
+
+
