fix(sonar): add test

--- a/src/app/components/config/game-config.component.html
+++ b/src/app/components/config/game-config.component.html
@@ -42,6 +42,7 @@
       (click)="selectChar(char)"
       (keydown)="selectChar(char)"
       tabindex="0"
+      role="button"
     />
     }
   </div>
