fix(bugs): fix bugs found

--- a/src/app/components/message/game-message.component.html
+++ b/src/app/components/message/game-message.component.html
@@ -7,7 +7,7 @@
   }@else{ @if (_hasMessage()) {
   <p>{{ message() }}</p>
   @if(_bolaDrac()){
-  <img [src]="`boardicons/b${randomNumber}.png`" alt="bola de drac" />
+  <img [src]="`boardicons/b4.png`" alt="bola de drac" />
   } }@else {
   <p>Activa el sonido, recoge la moneda y vuelve al inicio.</p>
   } @if (_shouldShowRetry()) {
