--- a/src/app/pages/chars/characters.component.scss
+++ b/src/app/pages/chars/characters.component.scss
@@ -21,13 +21,14 @@
     text-shadow: 1px 1px 8px black;
     position: relative;
     z-index: 2;
-    font-size: 2.5rem;
+    font-size: clamp(1rem, 2vw, 2.5rem);
   }
 
   button {
     font-family: 'Press Start 2P', monospace;
     position: relative;
     z-index: 2;
+    margin-bottom: 2rem;
   }
 }
 .character-container {
