--- a/src/app/components/animations/attack/app-wumpus-attack-animation.component.html
+++ b/src/app/components/animations/attack/app-wumpus-attack-animation.component.html
@@ -1,4 +1,4 @@
-@let selected = this.gameStore.settings().selectedChar;
+@let selected = this.gameStore.char();
 <div class="overlay">
   <div class="animation step-{{ step() }}">
     <div
