--- a/src/app/components/controls/game-controls.component.html
+++ b/src/app/components/controls/game-controls.component.html
@@ -7,7 +7,7 @@
   <ul class="control-list">
     <li><span class="key">⬆</span> Avanzar</li>
     <li><span class="key">⬅ ➡</span> Girar</li>
-    <li><span class="key">↩</span> Disparar ({{ arrows() }})</li>
+    <li><span class="key">↩</span> Disparar</li>
     <li><span class="key">N</span> Nueva partida</li>
   </ul>
 </aside>
