refactor(store): move logic to engine

--- a/src/app/pages/chars/characters.component.scss
+++ b/src/app/pages/chars/characters.component.scss
@@ -29,6 +29,11 @@
     position: relative;
     z-index: 2;
     margin-bottom: 2rem;
+    padding: 1.5rem;
+    background-color: var(--color-button);
+    &:hover{
+      background-color: var(--color-button-hover);
+    }
   }
 }
 .character-container {
