--- a/src/app/components/config/game-config.component.html
+++ b/src/app/components/config/game-config.component.html
@@ -17,15 +17,20 @@
     </select>
   </div>
 
-
   @let options = configs[this.configForm.get('difficulty')?.value];
 
   <div class="difficulty-description">
-    <p>{{ 'config.difficultyDescription' | transloco: {
-      maxLives: options.maxLives,
-      maxLevels: options.maxLevels,
-      chance: options.maxChance * 100
-      } }}</p>
+    <p>
+      {{
+        'config.difficultyDescription'
+          | transloco
+            : {
+                maxLives: options.maxLives,
+                maxLevels: options.maxLevels,
+                chance: options.maxChance * 100
+              }
+      }}
+    </p>
   </div>
 
   <div *ngIf="isDevMode" class="form-group">
@@ -54,5 +59,7 @@
     }
   </div>
 
-  <button type="submit" [disabled]="configForm.invalid" class="start-game">{{ 'config.playButton' | transloco }}</button>
+  <button type="submit" [disabled]="configForm.invalid" class="start-game">
+    {{ 'config.playButton' | transloco }}
+  </button>
 </form>
