--- a/src/app/pages/boss/boss-fight.component.html
+++ b/src/app/pages/boss/boss-fight.component.html
@@ -17,7 +17,11 @@
       >
         <span *ngIf="cell.hit && cell.hasBossPart" aria-hidden="true">
           @let char = _settings().selectedChar;
-          <img [ngSrc]="`chars/${char}/boss.png`" alt="{{ 'bossFight.bossImageAlt' | transloco }}" fill />
+          <img
+            [ngSrc]="`chars/${char}/boss.png`"
+            alt="{{ 'bossFight.bossImageAlt' | transloco }}"
+            fill
+          />
         </span>
         <span *ngIf="cell.hit && !cell.hasBossPart" aria-hidden="true">❌</span>
       </div>
@@ -26,17 +30,29 @@
 
   <div class="status-bar">
     <div class="leyenda">
-      <span aria-live="polite">{{ 'bossFight.attemptsLeft' | transloco:{ playerLives: playerLives } }}</span>
-      <span aria-live="polite">{{ 'bossFight.bossHealth' | transloco:{ bossRemaining: bossRemaining } }}</span>
+      <span aria-live="polite">{{
+        'bossFight.attemptsLeft' | transloco : { playerLives: playerLives }
+      }}</span>
+      <span aria-live="polite">{{
+        'bossFight.bossHealth' | transloco : { bossRemaining: bossRemaining }
+      }}</span>
     </div>
 
     <p aria-live="polite" class="game-message">{{ message }}</p>
 
-    <button *ngIf="gameOver && bossRemaining" (click)="retryGame()" [attr.aria-label]="'bossFight.retryGameAriaLabel' | transloco">
-      {{ 'bossFight.continuesButton' | transloco:{ livesLeft: this._hunter().lives } }}
+    <button
+      *ngIf="gameOver && bossRemaining"
+      (click)="retryGame()"
+      [attr.aria-label]="'bossFight.retryGameAriaLabel' | transloco"
+    >
+      {{ 'bossFight.continuesButton' | transloco : { livesLeft: this._hunter().lives } }}
     </button>
     @if(gameOver && !bossRemaining){
-    <button [attr.aria-label]="'bossFight.nextButtonAriaLabel' | transloco" class="next-btn" (click)="goToprizeScreen()">
+    <button
+      [attr.aria-label]="'bossFight.nextButtonAriaLabel' | transloco"
+      class="next-btn"
+      (click)="goToprizeScreen()"
+    >
       {{ 'bossFight.youWonButton' | transloco }}
     </button>
     }
