--- a/src/app/pages/chars/characters.component.html
+++ b/src/app/pages/chars/characters.component.html
@@ -21,10 +21,12 @@
         height="180"
         priority
       />
-      <div class="char-name">{{ ('charName.' + char) | transloco }}</div>
+      <div class="char-name">{{ 'charName.' + char | transloco }}</div>
     </div>
     }
   </div>
 
-  <button [disabled]="!selectedChar()" (click)="onClick()">{{ 'characters.confirmCharacterButton' | transloco }}</button>
+  <button [disabled]="!selectedChar()" (click)="onClick()">
+    {{ 'characters.confirmCharacterButton' | transloco }}
+  </button>
 </section>
