--- a/src/app/pages/story/story.component.html
+++ b/src/app/pages/story/story.component.html
@@ -11,7 +11,9 @@
     <p class="text">{{ displayedText() }}</p>
 
     @if(showExtraInfo()){
-    <p *ngIf="story?.effect" class="effect">{{ 'storyPage.effectPrefix' | transloco }}{{ formatEffect(story!.effect) }}</p>
+    <p *ngIf="story?.effect" class="effect">
+      {{ 'storyPage.effectPrefix' | transloco }}{{ formatEffect(story!.effect) }}
+    </p>
 
     <p class="instruction">{{ 'storyPage.clickToStartInstruction' | transloco }}</p>
     }
