--- a/src/app/components/title/title.component.html
+++ b/src/app/components/title/title.component.html
@@ -20,7 +20,9 @@
       <text x="730" class="neon-letter" style="animation-delay: 8s">L</text>
       <text x="775" class="neon-letter" style="animation-delay: 8.5s">O</text>
       @if(blackout()){
-      <text x="295" y="45" class="neon-letter subtitle" style="animation-delay: 10.5s">{{ 'title.blackoutSubtitle' | transloco }}</text>
+      <text x="295" y="45" class="neon-letter subtitle" style="animation-delay: 10.5s">
+        {{ 'title.blackoutSubtitle' | transloco }}
+      </text>
       }
     </g>
   </svg>
