--- a/src/app/pages/gamestats/results.component.html
+++ b/src/app/pages/gamestats/results.component.html
@@ -64,7 +64,14 @@
             <div class="record-info">
               <h3 class="record-nombre">{{ 'results.fastestLevel' | transloco }}</h3>
               <p class="record-valor">
-                {{ 'results.fastestLevelDetails' | transloco: { level: nivelMasRapido().level, time: (nivelMasRapido().timeInSeconds | number : '1.0-0') } }}
+                {{
+                  'results.fastestLevelDetails'
+                    | transloco
+                      : {
+                          level: nivelMasRapido().level,
+                          time: (nivelMasRapido().timeInSeconds | number : '1.0-0')
+                        }
+                }}
               </p>
             </div>
           </div>
@@ -73,7 +80,10 @@
             <div class="record-info">
               <h3 class="record-nombre">{{ 'results.fewestStepsLevel' | transloco }}</h3>
               <p class="record-valor">
-                {{ 'results.fewestStepsLevelDetails' | transloco: { level: nivelMenosPasos().level, steps: nivelMenosPasos().steps } }}
+                {{
+                  'results.fewestStepsLevelDetails'
+                    | transloco : { level: nivelMenosPasos().level, steps: nivelMenosPasos().steps }
+                }}
               </p>
             </div>
           </div>
@@ -81,7 +91,12 @@
             <div class="record-badge">💀</div>
             <div class="record-info">
               <h3 class="record-nombre">{{ 'results.totalDeaths' | transloco }}</h3>
-              <p class="record-valor">{{ 'results.totalDeathsDetails' | transloco: { count: estadisticasGenerales().muertes } }}</p>
+              <p class="record-valor">
+                {{
+                  'results.totalDeathsDetails'
+                    | transloco : { count: estadisticasGenerales().muertes }
+                }}
+              </p>
             </div>
           </div>
           <div class="record-item">
@@ -130,6 +145,12 @@
   }
 
   <div class="button-wrapper">
-    <button class="next-btn" [attr.aria-label]="'results.nextButtonAriaLabel' | transloco" (click)="goToCredits()">{{ 'results.nextButton' | transloco }}</button>
+    <button
+      class="next-btn"
+      [attr.aria-label]="'results.nextButtonAriaLabel' | transloco"
+      (click)="goToCredits()"
+    >
+      {{ 'results.nextButton' | transloco }}
+    </button>
   </div>
 </div>
