refactor(store): refactor store and computed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-menu>
-  @if (game.size() && game.hunterAlive()) {
+  @if (game.size() && game.isAlive()) {
   <app-game-controls />
   }
 </app-menu>
