--- a/src/app/pages/hunt-bisho.component.html
+++ b/src/app/pages/hunt-bisho.component.html
@@ -1,4 +1,4 @@
-@let board = game.board(); @let boardSize = board.length; @let isAlive = game.hunterAlive(); @let
+@let board = game.board(); @let boardSize = board.length; @let isAlive = game.isAlive(); @let
 hasWon = game.hasWon(); @let settings = game.settings();
 
 <main [appVisualEffect]="game.message()" class="main-container">
